--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 body {
-background-color: red;   
+    /* Color de fondo */
+    background: linear-gradient(to bottom right, rgb(236, 236, 245), pink); 
+
+/* Fuentes y configuraciones de fuentes */
+font-family: "Open Sans", sans-serif;
+font-optical-sizing: auto;
+font-weight: 400;
+font-style: normal;
+font-variation-settings:
+    "wdth" 100;
 
 }
