--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ p{
 }
 
 #proyecto-3 {
-    background-image: url('src-img/img-proyectos/clongoogle.png');
+    background-image: url('src-img/img-proyectos/misgustos2.PNG');
 }
 
 #Clongoogle-h3
@@ -85,4 +85,10 @@ p{
 
 .imagen-testimonios{
     border-radius:50%;
+}
+
+
+#mishabilidades{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    border-radius: 5%;
 }
